APP_DOMAIN = url WOULD change if using gitpod with PREBUILD, hence must generate at REAL workspace starts     #   TOOD: this will cause .env file keeps having new lines of APP_DOMAIN, but now I could not find "ONE TIME" but     #   not at init phase solution

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,7 +13,11 @@ ports:
 
 tasks:
   - name: Forem Server
+    # APP_DOMAIN = url WOULD change if using gitpod with PREBUILD, hence must generate at REAL workspace starts
+    #   TOOD: this will cause .env file keeps having new lines of APP_DOMAIN, but now I could not find "ONE TIME" but
+    #   not at init phase solution
     before: >
+      echo "APP_DOMAIN=\"$(gp url 3000 | cut -f 3 -d /)\"" >> .env &&
       redis-server &
       gp ports await 5432 &&
       sleep 1
