--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -39,7 +39,10 @@ tasks:
       mkdir -p /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ &&
       cp ./.gitpod-AtWorkspaceDotConfig-jdk.table.xml /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ &&
       cp ./.gitpod-AtWorkspaceDotConfig-ide.general.xml /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ &&
-      killall -v jb-launcher
+      killall -v jb-launcher &&
+      # try restart two times
+      sleep 10 && 
+      killall -v jb-launcher 
 
 github:
   prebuilds:
