--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -35,7 +35,8 @@ tasks:
     # and to make setting effective, restart jetbrains ide backend by killing jb-launcher
     command: >
       # just in case to prevent my content got overwritten
-      sleep 3 &&
+      # seems if no prebuild, then delay needs to be long since backend is busy with gitpod tasks and slow, really flaky...
+      sleep 10 &&
       mkdir -p /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ &&
       cp ./.gitpod-AtWorkspaceDotConfig-jdk.table.xml /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/jdk.table.xml &&
       cp ./.gitpod-AtWorkspaceDotConfig-ide.general.xml /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ide.general.xml &&
