--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -33,10 +33,10 @@ tasks:
   - name: fix RubyMine rvm issue
     # tried at before key but jetbrain folder not exists yet. Now try here and use mkdir as fail-safe
     # and to make setting effective, restart jetbrains ide backend by killing jb-launcher
+    # just in case to prevent my content got overwritten
+    # must not use > "folded" with COMMENT, since you will comment out whole line... OMG!
     command: >
-      # just in case to prevent my content got overwritten
-      # seems if no prebuild, then delay needs to be long since backend is busy with gitpod tasks and slow, really flaky...
-      sleep 10 &&
+      sleep 3 &&
       mkdir -p /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ &&
       cp ./.gitpod-AtWorkspaceDotConfig-jdk.table.xml /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/jdk.table.xml &&
       cp ./.gitpod-AtWorkspaceDotConfig-ide.general.xml /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ide.general.xml &&
