--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -33,13 +33,16 @@ tasks:
   - name: fix RubyMine rvm issue
     # tried at before key but jetbrain folder not exists yet. Now try here and use mkdir as fail-safe
     # and to make setting effective, restart jetbrains ide backend by killing jb-launcher
+    # now remove incorrectly placed comment, and restart 2 times
     command: >
-      # just in case to prevent my content got overwritten
-      sleep 90 &&
+      sleep 3 && 
       mkdir -p /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ &&
       cp ./.gitpod-AtWorkspaceDotConfig-jdk.table.xml /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ &&
       cp ./.gitpod-AtWorkspaceDotConfig-ide.general.xml /workspace/.config/JetBrains/RemoteDev-RM/_workspace_forem/options/ &&
-      killall -v jb-launcher
+      killall -v jb-launcher &&
+      sleep 10 &&
+      killall -v jb-launcher 
+    
 
 github:
   prebuilds:
